Update and rename index.html to ImageGallery.html

--- a/Sports template/ImageGallery.html
+++ b/Sports template/ImageGallery.html
@@ -78,8 +78,8 @@
   <!-- Membership page -->
   <section id="MYPAGE">
     <div class="wrapper" id="content">
-      <!-- INSERT YOUR PAGE HERE -->
-      <h1>YOUR PAGE WILL BE HERE</h1>
+      <!-- Image Gallery -->
+      <h1>Image Gallery</h1>
     </div>
   </section>
 
